tests/valid/ListLength_Valid_2.whiley
import whiley.lang.*

method main(System.Console sys) -> void:
    [int] arr = [1, 2, 3]
    assert |arr| == 3
